Refactor backend operations naming
